RESOLVED FIXED186905
Crash under WebResourceLoadStatisticsStore::mergeStatistics(WTF::Vector<WebCore::ResourceLoadStatistics, 0ul, WTF::CrashOnOverflow, 16ul>&&)
https://bugs.webkit.org/show_bug.cgi?id=186905
Summary Crash under WebResourceLoadStatisticsStore::mergeStatistics(WTF::Vector<WebCo...
Chris Dumez
Reported 2018-06-21 19:08:56 PDT
Crash under WebResourceLoadStatisticsStore::mergeStatistics(WTF::Vector<WebCore::ResourceLoadStatistics, 0ul, WTF::CrashOnOverflow, 16ul>&&): 4 WebKit: WTF::HashTable<WTF::String, WTF::KeyValuePair<WTF::String, unsigned int>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::String, unsigned int> >, WTF::StringHash, WTF::HashMap<WTF::String, unsigned int, WTF::StringHash, WTF::HashTraits<WTF::String>, WTF::HashTraits<unsigned int> >::KeyValuePairTraits, WTF::HashTraits<WTF::String> >::deallocateTable(WTF::KeyValuePair<WTF::String, unsigned int>*, unsigned int) <== 3 WebKit: WTF::HashTable<WTF::String, WTF::KeyValuePair<WTF::String, unsigned int>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::String, unsigned int> >, WTF::StringHash, WTF::HashMap<WTF::String, unsigned int, WTF::StringHash, WTF::HashTraits<WTF::String>, WTF::HashTraits<unsigned int> >::KeyValuePairTraits, WTF::HashTraits<WTF::String> >::operator=(WTF::HashTable<WTF::String, WTF::KeyValuePair<WTF::String, unsigned int>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::String, unsigned int> >, WTF::StringHash, WTF::HashMap<WTF::String, unsigned int, WTF::StringHash, WTF::HashTraits<WTF::String>, WTF::HashTraits<unsigned int> >::KeyValuePairTraits, WTF::HashTraits<WTF::String> >&&) | 3 WebKit: WTF::HashTable<WTF::String, WTF::KeyValuePair<WTF::String, unsigned int>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::String, unsigned int> >, WTF::StringHash, WTF::HashMap<WTF::String, unsigned int, WTF::StringHash, WTF::HashTraits<WTF::String>, WTF::HashTraits<unsigned int> >::KeyValuePairTraits, WTF::HashTraits<WTF::String> >::operator=(WTF::HashTable<WTF::String, WTF::KeyValuePair<WTF::String, unsigned int>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::String, unsigned int> >, WTF::StringHash, WTF::HashMap<WTF::String, unsigned int, WTF::StringHash, WTF::HashTraits<WTF::String>, WTF::HashTraits<unsigned int> >::KeyValuePairTraits, WTF::HashTraits<WTF::String> >&&) | 3 WebKit: WebCore::ResourceLoadStatistics::operator=(WebCore::ResourceLoadStatistics&&) | 3 WebKit: WebKit::WebResourceLoadStatisticsStore::mergeStatistics(WTF::Vector<WebCore::ResourceLoadStatistics, 0ul, WTF::CrashOnOverflow, 16ul>&&) | 3 WebKit: WebKit::WebResourceLoadStatisticsStore::mergeWithDataFromDecoder(WebCore::KeyedDecoder&) | 3 WebKit: WebKit::ResourceLoadStatisticsPersistentStorage::refreshMemoryStoreFromDisk() | 3 libdispatch.dylib: _dispatch_client_callout | pruning: 2 libdispatch.dylib: _dispatch_continuation_pop$VARIANT$armv81 | pruning: 1 libdispatch.dylib: _dispatch_continuation_pop$VARIANT$mp pruning: 1 WebKit: WebCore::ResourceLoadStatistics::~ResourceLoadStatistics()
Attachments
Patch (17.07 KB, patch)
2018-06-21 19:26 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2018-06-21 19:09:10 PDT
Chris Dumez
Comment 2 2018-06-21 19:26:28 PDT
Brent Fulgham
Comment 3 2018-06-22 12:34:11 PDT
Comment on attachment 343301 [details] Patch This looks like a nice simplification. r=me.
WebKit Commit Bot
Comment 4 2018-06-22 13:16:38 PDT
Comment on attachment 343301 [details] Patch Clearing flags on attachment: 343301 Committed r233092: <https://trac.webkit.org/changeset/233092>
WebKit Commit Bot
Comment 5 2018-06-22 13:16:39 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.